--- a/projeto/style.css
+++ b/projeto/style.css
@@ -2,7 +2,7 @@
     margin: 0px;
     padding: 0px;
     color: white;
-    font: 1.1em ;
+    font-size: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -14,24 +14,40 @@ header{
     min-height: 150px;
     align-items: center;
     justify-content: center;
-    transform
+    transform: translate(center)
 }
 
+header h1{
+    font-size: 50px;
+}
 
+header p{
+    transform: translate(25%, 25%);
+    font-size: 16px;
+    color: rgb(183, 183, 183);
+}
+
+header a{
+    font-size: 20px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
 
 section{
     display: flex;
-    min-height: 400px;
-    align-items: center;
-}
-
-section > div{
-    text-indent: 20px;
-    
+    flex-direction: column;
+    min-height: 50px;
 }
 
 div{
     margin: 40px 0px;
+    width: 400px;
 }
 
 div p{
@@ -41,15 +57,20 @@ div p{
 .pagina p{
     background-color: white;
     color: black;
-    
+    text-indent: 20px;
 }
+
+
+
 
 .vazio{
     background-color: rgba(128, 128, 128, 0);
+    padding: 10px
 }
 
 .vazio div{
-    background-color: rgba(0, 0, 0, 0.566);
+    background-color: rgba(0, 0, 0, 0.499);
+    padding: 10px;
 }
 
 #v1{
@@ -61,6 +82,19 @@ div p{
 }
 
 
+
+
+
 footer{
-    
+    background-color: black;
+    padding: 10px;
+    text-align: center;
+}
+
+footer p{
+    font-size: 14px;
+}
+
+footer a{
+    font-size: 16px;
 }
